Update kali defconfig

--- a/arch/arm/configs/cyanogenmod_hammerhead_kali_defconfig
+++ b/arch/arm/configs/cyanogenmod_hammerhead_kali_defconfig
@@ -376,7 +376,7 @@ CONFIG_MACH_MSM8974_HAMMERHEAD=y
 #
 # LGE Specific Patches
 #
-CONFIG_LGE_HANDLE_PANIC=y
+# CONFIG_LGE_HANDLE_PANIC is not set
 CONFIG_LGE_BLUETOOTH=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 # CONFIG_KERNEL_MSM_CONTIG_MEM_REGION is not set
@@ -421,8 +421,8 @@ CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
 # CONFIG_MSM_RESET_MODEM is not set
-CONFIG_MSM_SMD_LOGGING=y
-CONFIG_MSM_IPC_LOGGING=y
+# CONFIG_MSM_SMD_LOGGING is not set
+# CONFIG_MSM_IPC_LOGGING is not set
 CONFIG_MSM_SMD_NMEA=y
 # CONFIG_MSM_SMD_TTY is not set
 CONFIG_MSM_SMD_QMI=y
@@ -469,10 +469,10 @@ CONFIG_MSM_PIL_VENUS=y
 # CONFIG_MSM_PIL_GSS is not set
 # CONFIG_MSM_PIL_PRONTO is not set
 CONFIG_MSM_SCM=y
-CONFIG_MSM_TZ_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
+# CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
@@ -507,10 +507,7 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-CONFIG_MSM_OCMEM_DEBUG=y
-# CONFIG_MSM_OCMEM_NONSECURE is not set
-# CONFIG_MSM_OCMEM_POWER_DEBUG is not set
-# CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
+# CONFIG_MSM_OCMEM_DEBUG is not set
 # CONFIG_MSM_OCMEM_POWER_DISABLE is not set
 CONFIG_SENSORS_ADSP=y
 # CONFIG_MSM_RTB is not set
@@ -649,7 +646,7 @@ CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
-CONFIG_SPLIT_PTLOCK_CPUS=4
+CONFIG_SPLIT_PTLOCK_CPUS=999999
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
@@ -1422,7 +1419,7 @@ CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
 CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
+# CONFIG_SCSI_LOGGING is not set
 CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_SCSI_WAIT_SCAN=m
 
@@ -3530,7 +3527,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
-# CONFIG_DEBUG_SPINLOCK is not set
+CONFIG_DEBUG_SPINLOCK=y
 # CONFIG_DEBUG_MUTEXES is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
